--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     }
 
     section.project-images img {
-  max-width: 100%;
-  height: auto;
-  aspect-ratio: 4 / 3;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  object-fit: contain;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
+      max-width: 100%;
+      height: auto;
+      aspect-ratio: 4 / 3;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      object-fit: contain;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
@@ -33,31 +33,31 @@
 
   <!-- Project Datasheet section -->
   <section>
-  <h2>Project Datasheet</h2>
-  <ul>
-    <li><strong>Title:</strong> Symbiosis.live</li>
-    <li><strong>Author:</strong> Tiri Kananuruk + Sebastián Morales Prado</li>
-    <li><strong>Year:</strong> 2022</li>
-    <li><strong>Format:</strong> Installation / Bio-digital System</li>
-    <li><strong>Audience:</strong> Media artists, researchers, public observers, networked agents (bots)</li>
-  </ul>
-</section>
+    <h2>Project Datasheet</h2>
+    <ul>
+      <li><strong>Title:</strong> Symbiosis.live</li>
+      <li><strong>Author:</strong> Tiri Kananuruk + Sebastián Morales Prado</li>
+      <li><strong>Year:</strong> 2022</li>
+      <li><strong>Format:</strong> Installation / Bio-digital System</li>
+      <li><strong>Audience:</strong> Media artists, researchers, public observers, networked agents (bots)</li>
+    </ul>
+  </section>
 
   <!-- Project Image section -->
   <section class="project-images">
-  <h2>Project Images</h2>
-  <div class="image-grid">
-    <img src="images/220330_GMAP62.jpg" alt="Symbiosis.live - Image 1" />
-    <img src="images/cells-in-server.gif" alt="Symbiosis.live - Image 2" />
-    <img src="images/symbiosis_Microscope_1200.jpg" alt="Symbiosis.live - Image 3" />
-  </div>
-</section>
+    <h2>Project Images</h2>
+    <div class="image-grid">
+      <img src="images/220330_GMAP62.jpg" alt="Symbiosis.live - Image 1" />
+      <img src="images/cells-in-server.gif" alt="Symbiosis.live - Image 2" />
+      <img src="images/symbiosis_Microscope_1200.jpg" alt="Symbiosis.live - Image 3" />
+    </div>
+  </section>
 
   <!-- Author’s Writings section -->
   <section>
     <h2>Author’s Writings</h2>
     <ul>
-      <li><a href="https://morakana.com/work/inoculated" target="_blank">Project description on MoraKana</a></li>
+      <li><a href="https://morakana.com/work/symbiosis-live" target="_blank">Project description on MoraKana</a></li>
     </ul>
   </section>
 
@@ -98,7 +98,7 @@ Symbiosis.live was developed in 2022 during a period of increasing global attent
 digital-bio entanglement, and the role of automation in defining "life." It was exhibited at the
 Gwangju Art & Media Center (South Korea), engaging with an audience familiar with media arts,
 bio-art, and critical technological practices.
-Source: <a href="https://morakana.com/work/symbiosis-live" target="_blank">morakana.com</a>
+Source: <a href="https://morakana.com/" target="_blank">morakana.com</a>
     </pre>
     <p><strong>Authors’ Motivation:</strong></p>
     <ul class="context-list">
@@ -124,6 +124,14 @@ Source: <a href="https://morakana.com/work/symbiosis-live" target="_blank">morak
       <li><strong>Fluid materiality:</strong> transparency, bubbles, flows echo soft robotics aesthetics. (<a href="https://www.frontiersin.org/articles/10.3389/frobt.2024.1472051/full" target="_blank">Frontiers in Robotics</a>)</li>
       <li><strong>Situates within bioart community:</strong> echoes SymbioticA tradition & cross-media labs. (<a href="https://visualsymbiosis.com/about.html" target="_blank">Visual Symbiosis</a>)</li>
     </ul>
+  </section>
+
+  <!-- Full-width image section -->
+  <section class="full-width-image">
+    <h2>Frame Preview</h2>
+    <div class="image-container">
+      <img src="images/Frame 1 (1).png" alt="Frame 1 Preview" />
+    </div>
   </section>
 
   <!-- JavaScript file link -->
